data/derived/sp14/progs/unify/prog2031.ml.out
Characters 7-9:
  51 mod 10
         ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
